--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,6 @@
     },
     "require": {
     	"php": ">=5.6.0",
-    	"phpoffice/phpspreadsheet": "1.8.2"
+    	"phpoffice/phpspreadsheet": ">=1.4"
     }
 }
